--- a/.github/workflows/cloud-run.yaml
+++ b/.github/workflows/cloud-run.yaml
@@ -56,6 +56,7 @@ jobs:
             ENQUIRYMAX_CLIENT_SECRET=ENQUIRYMAX_CLIENT_SECRET:latest
           flags: |
             --service-account ${{ env.GCP_SA }}
+            --allow-unauthenticated
 
       - run: |-
           gcloud run services update ${{ env.SERVICE_NAME }} \
