--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@types/jest": "^29.5.11",
         "dotenv": "^16.3.1",
         "jest": "^29.7.0",
+        "prettier": "^3.2.4",
         "ts-jest": "^29.1.1",
         "tsx": "^4.6.2",
         "typescript": "^5.3.3"
